--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,12 +1,29 @@
 * {
-    margin: 0;
-    padding: 0;
-	box-sizing: border-box;
-  }
-  
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html body{
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
 body {
-  background-image: url("/resources/images/circuit-board.jpg");
-  background-size: 50%;
-  background-repeat: repeat;
+  background: 
+  black
+  url("resources/images/chain.png")
+  repeat-y
+  60px
+  right
+}
+.container-fluid {
+  width: 100vw;
+}
+.container { 
+  flex: 1;
+}
+a {
+  color: inherit;
+  text-decoration: none;
 }
