--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,3 +1,5 @@
+/*#region ===== BODY ================ */
+
 * {
   margin: 0;
   padding: 0;
@@ -35,8 +37,238 @@ a {
   text-decoration: none;
 }
 
+/*#endregion*/
+/*#region ===== CAROUSEL ============ */
 
-/*#region ===== VIEWPORT BUG ======== */
+.glide__slide {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.glide__slide img {
+  width: 100%;
+  height: 100%;
+}
+.overlay-text {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+.glide__arrows { /*mod*/
+  position: absolute !important;
+  top: 30px!important;
+  display: flex;
+  justify-content: space-between;
+  width: 100%; 
+}
+.glide__arrow--left { /*mod*/
+	position: relative;
+	left: 10px;
+}
+.glide__arrow--right { /*mod*/
+	position: relative;
+	right: 10px;
+}
+.glide {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/*#endregion*/
+/*#region ===== COLOR =============== */
+
+:root {
+  --cp00: #004372;  /* var(--cp00)     Color Primary 100%   */
+  --cp10: #e8f5ff;  /* var(--cp10)     Color Primary 10%    */
+  --cp50: #0274e0;  /* var(--cp50)     Color Primary 50%    */
+  --cplx: #ffd4dbd0;  /* var(--cp50)     Color Parallax       */
+  --cs00: #6b7e63;  /* var(--cs00)     Color Secondary 100% */
+  --cs10: #eff2ee;  /* var(--cs10)     Color Secondary 10%  */
+  --ct00: #660033;  /* var(--ct00)     Color Tertiary 100%  */
+  --ct10: #660033;  /* var(--ct10)     Color Tertiary Tint  */
+  --ch00: #663300;  /* var(--ch10)     Color Highlight 100% */
+  --ca0a: #0f0fb5;  /* var(--ca0a)     Color a href link 1  */
+  --ca0h: #003366;  /* var(--ca0h)     Color a href link 2  */
+}
+/* Color Elements */btn btn-success
+.btn-primary, .btn-success {
+  background-color: var(--cp00) !important;
+  border: none;
+}
+.btn-primary:hover, .btn-success:hover {
+  background-color: var(--cp50) !important;
+}
+
+/*#endregion*/
+/*#region ===== FONTS =============== */
+
+@font-face {
+  font-family: "Aachen", serif;
+  src: url('/resources/fonts/aachen.otf') format("opentype");
+}
+h1 {
+  font-family: "Aachen", serif !important; 
+  color: var(--cp00);
+  margin: 0 !important;
+  padding: 0 !important;
+  font-size: 4rem !important;
+  text-align: center !important;
+  text-shadow: black 1px 1px 5px;
+}
+h2 {
+  font-family: "Tangerine", serif !important; 
+  color: var(--cp00);
+  margin: 0 !important;
+  padding: 0 !important;
+  font-size: 4rem !important;
+  margin-top: 2rem !important;  
+  text-align: center !important;
+  text-shadow: #1c1c1c 1px 1px 5px;
+}
+
+/*#endregion*/
+/*#region ===== FOOTER ============== */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px 10px 5px 10px;
+  background-color: var(--cp00);
+  font-size: .75rem;
+  color:#fff;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+}
+.footer a {
+  text-decoration: none;
+  color:#fff; 
+  font-weight: bold;
+}
+.footer a:hover {
+  color: var(--ca02); 
+}
+
+/*#endregion*/
+/*#region ===== NAVBAR ============== */
+
+.navbar { 
+  background-color: var(--cp10) !important;
+  z-index: 1040 !important;
+}
+/* Navbar Title */
+.navbar-brand { 
+  font-family: "Tangerine", serif !important; 
+  font-size: 2.5rem;
+  color:var(--cp00);
+}
+/* Navbar Hide on Scroll */
+#navbar-container { 
+  position: sticky; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
+  transition: transform 1s ease, opacity 1s ease;
+}
+#navbar-container.scrolled { 
+  transform: translateY(-100%);
+  opacity: 0;
+}
+
+/*#endregion*/
+/*#region ===== PHOTOBOX ============ */
+
+/* Parent container */
+.photobox-container {
+  width: 100%; 
+}
+.photobox {
+  position: relative;
+  display: block;
+  text-align: center;
+/*  vertical-align: middle; VSCode doesn't like this */
+  margin: 0;
+  height: auto;
+  width: auto;
+  background-color: var(--cp10);
+  border: 2px solid var(--cp00) !important;
+  pointer-events: all;
+}
+.photobox p {
+  align-content: center;
+}
+.link-box {
+	align-items: center;
+	display: flex; 
+	justify-content: space-between;
+	margin-top: .75rem;
+  width: 100%;
+}
+.link-box input[type="text"] {
+	flex: 1;
+  flex-shrink: 1;
+  min-width: 0;
+}
+.link-vid {
+	align-items: center;
+	display: flex; 
+	justify-content: space-between;
+	margin-top: .75rem;
+	margin-bottom: .75rem;
+  width: 100%;
+}
+.link-vid input[type="text"] {
+	flex: 1;
+  flex-shrink: 1;
+  min-width: 0;
+}
+.browse-box {
+	align-items: center;
+	display: flex; 
+	justify-content: space-between;
+	margin-top: .4rem;
+	margin-bottom: .5rem;
+  width: 100%;
+}
+.browse-box input[type="text"] {
+	flex: 1;
+  flex-shrink: 1;
+  min-width: 0;
+}
+.caption-box input[type="text"] {
+  margin-top: .5rem;
+	margin-bottom: .75rem !important;
+  width: 100%;
+} 
+.ratio-16x9 {
+	background-color: var(--cp10);
+	border: 2px solid var(--cp00);
+	overflow: hidden;
+}
+
+/*#endregion*/
+/*#region ===== SITEMAP ============= */
+
+.sitemap ul {
+  list-style-type: disc;
+  margin-left: -10px;
+}
+.sitemap a {
+  text-decoration: none;
+  color: inherit;
+}
+.sitemap a:hover {
+  color: var(--ca01);
+  font-weight: bold;
+}
+/*#endregion*/
+/*#region ===== VIEWPORT ============ */
+
 #viewport-size {
   display: block; /* change from block to none to hide */
   position: fixed;
@@ -49,4 +281,6 @@ a {
   font-size: 1rem;
   z-index: 5;
 }
+
 /*#endregion*/
+
