--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,7 +7,7 @@
 }
 html body {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -17,9 +17,9 @@ body::after {
   content: "";
   position: fixed;
   right: 1rem;
-  width: 150px;
+  width: 600px;
   height: 100%;
-  background: url("../images/chain.png") repeat-y right top/150px auto;
+  background: url("../images/chain.png") repeat-y right;top: auto;
   pointer-events: none; 
   z-index: -1; 
   filter: invert(8%) sepia(24%) saturate(4649%) hue-rotate(343deg) brightness(95%) contrast(114%);
@@ -31,7 +31,7 @@ body::after {
   margin-right: 0.5rem;
 }
 .container-fluid {
-  width: 100vw;
+  width: 100%;;
 }
 .container { 
   flex: 1;
@@ -40,10 +40,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
-/* 
-.headspace {    (Added to h1)
-  height: 0px;
-} 
+
 /*#endregion*/
 /*#region ===== CAROUSEL ============ */
 
@@ -130,16 +127,13 @@ h1 {
   font-size: 4rem;
   text-align: center;
   text-shadow: var(--cpcn) 1px 1px 5px;
-
 }
-h1 span {
+.tik {
   color: yellow;
 }
 .hide {
   visibility: hidden;
 }
-
-
 h2 {
   font-family: "Aachen", serif; 
   color: white;
@@ -148,7 +142,6 @@ h2 {
   font-size: 4rem;
   margin-top: 275px;  
   text-align: center;
-  text-shadow: #1c1c1c 1px 1px 5px;
 }
 .navbar-brand > img {
   display: flex;
@@ -172,7 +165,7 @@ h2 {
 /*#endregion*/
 /*#region ===== FOOTER ============== */
 
-.footer {
+footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -181,7 +174,7 @@ h2 {
   font-size: .75rem;
   color:#fff;
   width: 100%;
-  position: relative;
+  position: fixed;
   bottom: 0;
 }
 .footer a {
@@ -198,26 +191,21 @@ h2 {
 
 .navbar { 
   background-color: var(--cpcn) !important;
-  z-index: 1040 !important;
-}
-/* Navbar Title */
-.navbar-brand { 
-  font-family: "Aachen", serif !important; 
-  font-size: 2rem;
 }
 /* Navbar Hide on Scroll */
-#navbar-container { 
+#navbar.container { 
   position: sticky; 
   top: 0;
   left: 0;
   width: 100%;
   z-index: 5;
-/*  transition: transform 1s ease, opacity 1s ease; /\/\/\ Acting funky */
+  transition: transform 1s ease, opacity 1s ease; 
 }
-#navbar-container.scrolled { 
+#navbar.scrolled { 
   transform: translateY(-100%);
   opacity: 0;
 }
+
 
 /*#endregion*/
 /*#region ===== PHOTOBOX ============ */
@@ -313,11 +301,14 @@ h2 {
   position: fixed;
   background: #fff;
   color: black;
-  padding: 2px 4px;
+  padding: 4px 4px;
   border-radius: 4px;
   font-family: Arial, sans-serif;
-  font-size: 0.75em;
+  line-height: .75rem;
+  font-size: 0.75rem;
   z-index: 5;
+  top: 100px; 
+  right: 60px;
 }
 
 /*#endregion*/
