--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,12 +6,12 @@
   box-sizing: border-box;
 }
 html body {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: black;
+  background-color: var(--csbg);
 }
 body::after {
   content: "";
@@ -19,14 +19,15 @@ body::after {
   right: 1rem;
   width: 600px;
   height: 100%;
-  background: url("../images/chain.png") repeat-y right;top: auto;
+  background: url("../images/chain.png") repeat-y right;
+  top: auto;
   pointer-events: none; 
   z-index: -1; 
   filter: invert(8%) sepia(24%) saturate(4649%) hue-rotate(343deg) brightness(95%) contrast(114%);
 }
 .active::before {
   content: "\2B24"; 
-  color: yellow;
+  color: var(--cshl);
   font-size: inherit;
   margin-right: 0.5rem;
 }
@@ -85,18 +86,13 @@ a {
 /*#region ===== COLOR =============== */
 
 :root {
-  --cp00: #004372;  /* var(--cp00)     Color Primary 100%   */
-  --cp10: #e8f5ff;  /* var(--cp10)     Color Primary 10%    */
-  --cp50: #0274e0;  /* var(--cp50)     Color Primary 50%    */
-  --cplx: #ffd4db;  /* var(--cplx)     Color Parallax       */
-  --cpcn: #2D0000;  /* var(--cpcn)     Color Chain          */
-  --cs00: #6b7e63;  /* var(--cs00)     Color Secondary 100% */
-  --cs10: #eff2ee;  /* var(--cs10)     Color Secondary 10%  */
-  --ct00: #660033;  /* var(--ct00)     Color Tertiary 100%  */
-  --ct10: #660033;  /* var(--ct10)     Color Tertiary Tint  */
-  --ch00: #663300;  /* var(--ch10)     Color Highlight 100% */
-  --ca0a: #0f0fb5;  /* var(--ca0a)     Color a href link 1  */
-  --ca0h: #003366;  /* var(--ca0h)     Color a href link 2  */
+  --cp00: #004372;  /* var(--cp00)     Primary 100%   */
+  --cp10: #e8f5ff;  /* var(--cp10)     Primary 10%    */
+  --cp50: #0274e0;  /* var(--cp50)     Primary 50%    */
+  --cplx: #ffd4db;  /* var(--cplx)     Parallax       */
+  --cpcn: #2D0000;  /* var(--cpcn)     Chain          */
+  --cshl: #ffff00;  /* var(--cshl)     Highlight      */
+  --csbg: #000000;  /* var(--csbg)     Background      */
 }
 /* Color Elements */btn btn-success
 .btn-primary, .btn-success {
@@ -159,16 +155,18 @@ h2 {
 /*#region ===== FOOTER ============== */
 
 footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: absolute;
+  bottom: 0;
   padding: 3px 10px 5px 10px;
   background-color: var(--cpcn);
   font-size: .75rem;
   color:#fff;
   width: 100%;
-  position: absolute;
-  bottom: 0;
+}
+.footer-container {
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between;
 }
 .footer a {
   text-decoration: none;
