--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,7 +11,7 @@ html body {
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: var(--csbg);
+  background-color: var(--cbg);
 }
 body::after {
   content: "";
@@ -27,7 +27,7 @@ body::after {
 }
 .active::before {
   content: "\2B24"; 
-  color: var(--cshl);
+  color: var(--chl);
   font-size: inherit;
   margin-right: 0.5rem;
 }
@@ -41,6 +41,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
+/*
+.top-buffer {
+  height: 150px;
+}
+*/
 
 /*#endregion*/
 /*#region ===== CAROUSEL ============ */
@@ -86,13 +91,10 @@ a {
 /*#region ===== COLOR =============== */
 
 :root {
-  --cp00: #004372;  /* var(--cp00)     Primary 100%   */
-  --cp10: #e8f5ff;  /* var(--cp10)     Primary 10%    */
-  --cp50: #0274e0;  /* var(--cp50)     Primary 50%    */
-  --cplx: #ffd4db;  /* var(--cplx)     Parallax       */
-  --cpcn: #2D0000;  /* var(--cpcn)     Chain          */
-  --cshl: #ffff00;  /* var(--cshl)     Highlight      */
-  --csbg: #000000;  /* var(--csbg)     Background      */
+  --chl: #ffff00;  /* var(--chl)  h1 Font     */
+  --ch2: #ffff00;  /* var(--ch2)  h2 Font     */
+  --ccn: #2D0000;  /* var(--ccn)  Chain       */
+  --cbg: #000000;  /* var(--cbg)  Background  */
 }
 /* Color Elements */btn btn-success
 .btn-primary, .btn-success {
@@ -115,23 +117,40 @@ body {
 }
 h1 {
   font-family: "Alfa Slab One", serif; 
-  color: white;
+  color: var(--chl);
+  margin: 0 0 2rem 0;
+  line-height: 2.7rem;
+  padding: 0;
+  font-size: 4rem;
+  text-align: center;    
+}
+h2 {
+  font-family: "Alfa Slab One", serif; 
+  color: var(--ch2);
+  margin: 0;
+  padding: 0;
+  font-size: 2.5rem;
+  margin-top: 275px;  
+  text-align: center;
+}
+h3 {
+  font-family: "Alfa Slab One", serif; 
   margin-top: 125px;
   margin-bottom: 1rem;
   padding: 0;
   font-size: 4rem;
-  text-align: center;
-  text-shadow: var(--cpcn) 1px 1px 5px;
+  text-align: center;;
+    
+
+  background-color: var(--chl);
+  color: transparent;
+  text-shadow: 0px 2px 3px rgba(255,255,255,1.0);
+  -webkit-background-clip: text;
+     -moz-background-clip: text;
+          background-clip: text;
+          
 }
-h2 {
-  font-family: "Aachen", serif; 
-  color: white;
-  margin: 0;
-  padding: 0;
-  font-size: 4rem;
-  margin-top: 275px;  
-  text-align: center;
-}
+
 .navbar-brand > img {
   display: flex;
   align-items: center;
@@ -158,7 +177,7 @@ footer {
   position: absolute;
   bottom: 0;
   padding: 3px 10px 5px 10px;
-  background-color: var(--cpcn);
+  background-color: var(--ccn);
   font-size: .75rem;
   color:#fff;
   width: 100%;
@@ -181,7 +200,7 @@ footer {
 /*#region ===== NAVBAR ============== */
 
 .navbar { 
-  background-color: var(--cpcn) !important;
+  background-color: var(--ccn) !important;
 }
 /* Navbar Hide on Scroll */
 #navbar.container { 
@@ -284,6 +303,55 @@ footer {
   color: var(--ca01);
   font-weight: bold;
 }
+/*#endregion*/
+/*#region ===== TOP GRID ============ */
+
+.top-container {
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100vw;
+  margin: 5rem 5rem;
+}
+.top-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+  width: 33vw; /* 1/3 of the viewport width */
+}
+.top-grid div {
+  background-color: #8dbbf1;
+  aspect-ratio: 1 / 1; /* Keeps the cells square */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.top-text {
+  flex: 1;
+  padding: 10px;
+  align-self: flex-start; /* Aligns text to the top */
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .top-grid {
+    width: 100%;
+  }
+}
+
+.grid1 {
+  border-radius: 25px 0 0 0;
+}.grid3 {
+  border-radius: 0 25px 0 0;
+}.grid7 {
+  border-radius: 0 0 0 25px;
+}.grid9 {
+  border-radius: 0 0 25px 0;
+}
+
 /*#endregion*/
 /*#region ===== VIEWPORT ============ */
 
