--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -28,7 +28,7 @@ body::after {
 }
 .active::before {
   content: "\2B24"; 
-  color: var(--chl);
+  color: var(--ch1);
   font-size: inherit;
   margin-right: 0.5rem;
 }
@@ -52,7 +52,6 @@ a {
   position: relative; /* Ensures proper positioning for .parallax */
   z-index: 0; /* Default for container */
 }
-
 .parallax {
   background-image: url("../images/chain.png");
   background-repeat: repeat-y;
@@ -114,8 +113,8 @@ a {
 /*#region ===== COLOR =============== */
 
 :root {
-  --chl: #ffc800;  /* var(--chl)  h1 Font     */
-  --ch2: #ffff00;  /* var(--ch2)  h2 Font     */
+  --ch1: #ffc800;  /* var(--ch1)  h1 Font     */
+  --ch2: #ffc800;  /* var(--ch2)  h2 Font     */
   --ccn: #2D0000;  /* var(--ccn)  Chain       */
   --cbg: #000000;  /* var(--cbg)  Background  */
 }
@@ -140,7 +139,7 @@ body {
 }
 h1 {
   font-family: "Alfa Slab One", serif; 
-  color: var(--chl);
+  color: var(--ch1);
   margin: 0 0 2rem 0;
   /*line-height: 2.7rem;*/
   padding: 0;
@@ -165,7 +164,7 @@ h3 {
   text-align: center;;
     
 
-  background-color: var(--chl);
+  background-color: var(--ch1);
   color: transparent;
   text-shadow: 0px 2px 3px rgba(255,255,255,1.0);
   -webkit-background-clip: text;
@@ -243,8 +242,6 @@ footer {
   transform: translateY(-100%);
   opacity: 0;
 }
-
-
 .dog-letter:hover { 
   transition: opacity 1s ease;
   opacity: .5;
@@ -353,7 +350,28 @@ footer {
   font-weight: bold;
 }
 /*#endregion*/
-/*#region ===== TOP GRID ============ */
+/*#region ===== PROJECT ============ */
+
+.project-content {
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100vw;
+  margin: 2rem 1rem;
+}
+.project-text {
+  flex: 1;
+  padding-left: 2rem;
+  align-self: flex-start; /* Aligns text to the top */
+}
+
+.project-img {
+  width: 33vw; 
+  display: flex;
+  flex-direction: column;
+  object-fit: contain; 
+}
 
 .top-container {
   justify-content: center;
@@ -361,32 +379,70 @@ footer {
   display: flex;
   flex-wrap: wrap;
   max-width: 100vw;
-  margin: 5rem 1rem;
-}
-.top-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 7px;
-  width: 33vw; /* 1/3 of the viewport width */
-}
-.top-grid div {
-  aspect-ratio: 1 / 1; /* Keeps the cells square */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.grid-box {
-  background-color: #8dbbf1;
-  border: 7px solid var(--ccn);
-}
-.grid-box:hover {
-  border-color: yell#ffc800;
+  margin: 130px 1rem 2rem 1rem;
 }
 .top-text {
   flex: 1;
   padding-left: 2rem;
   align-self: flex-start; /* Aligns text to the top */
 }
+
+/* ---------- TOP GRID ---------- */
+.top-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 7px;
+  width: 33vw; /* 1/3 of viewport */
+}
+.top-grid div {
+  aspect-ratio: 1 / 1; /* Keeps the cells square */
+  display: flex;
+}
+.grid-box {
+  display: block;
+  position: relative;
+  background-size: contain;
+  background-size: 100% 100%;
+  border: 7px solid var(--ccn);
+  width: 11vw; /* 1/3 of top-grid */
+  height: auto;
+}
+
+.grid-box a {
+  position: absolute; /* Makes the anchor fill the entire box */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block; /* Ensures the link behaves as a block element */
+}
+
+/*.grid-box img{
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}*/
+.grid-box:hover {
+  border-color: var(--ch1);
+  transition: transform .3s ease; 
+  transform: scale(1.05); 
+}
+.grid1 { border-radius: 1.5rem 0 0 0; 
+  transform-origin: bottom right}
+  .grid1 img{ border-radius: 1.5rem 0 0 0; }
+.grid2 { transform-origin: bottom }
+.grid3 { border-radius: 0 25px 0 0; 
+  transform-origin: bottom left}
+  .grid3 img{ border-radius: 0 25px 0 0; }
+.grid4 { transform-origin: right }
+.grid6 { transform-origin: left }
+.grid7 { border-radius: 0 0 0 25px; 
+  transform-origin: top right}
+  .grid7 img{ border-radius: 0 0 0 25px; }
+.grid8 { transform-origin: top }
+.grid9 { border-radius: 0 0 25px 0; 
+  transform-origin: top left}
+  .grid9 img{ border-radius: 0 0 25px 0; }
 
 @media (max-width: 768px) {
   .container {
@@ -396,12 +452,6 @@ footer {
     width: 100%;
   }
 }
-
-
-.grid1 { border-radius: 25px 0 0 0; }
-.grid3 { border-radius: 0 25px 0 0; }
-.grid7 { border-radius: 0 0 0 25px; }
-.grid9 { border-radius: 0 0 25px 0; }
 
 
 /*#endregion*/
